// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer must not initialize the same thing and not with undefined 1`] = `Object {}`;

exports[`reducer returns the same as before (for compatibility) 1`] = `Object {}`;

exports[`reducer returns the same as before (for compatibility) 2`] = `
Object {
  "5ce0cae66228c07c50f12e24": Object {
    "Regional": "5ce0cae66228c07c50f12e24",
    "_id": "5ce0cae66228c07c50f12e24",
    "blueAlliance": "5ce0cae66228c07c50f12e24",
    "endDate": 2017-12-17T17:45:00.000Z,
    "redAlliance": "5ce0cae66228c07c50f12e24",
    "startDate": 2017-12-17T17:45:00.000Z,
  },
}
`;

exports[`reducer returns the same as before (for compatibility) 3`] = `
Object {
  "5ce0cae66228c07c50f12e23": Object {
    "Regional": "5ce0cae66228c07c50f12e24",
    "_id": "5ce0cae66228c07c50f12e23",
    "blueAlliance": "5ce0cae66228c07c50f12e24",
    "endDate": 2017-12-17T17:45:00.000Z,
    "redAlliance": "5ce0cae66228c07c50f12e24",
    "startDate": 2017-12-17T17:45:00.000Z,
  },
  "5ce0cae66228c07c50f12e24": Object {
    "Regional": "5ce0cae66228c07c50f12e24",
    "_id": "5ce0cae66228c07c50f12e24",
    "blueAlliance": "5ce0cae66228c07c50f12e24",
    "endDate": 2017-12-17T17:45:00.000Z,
    "redAlliance": "5ce0cae66228c07c50f12e24",
    "startDate": 2017-12-17T17:45:00.000Z,
  },
}
`;

exports[`reducer returns the same as before (for compatibility) 4`] = `
Object {
  "5ce0cae66228c07c50f12e24": Object {
    "Regional": "5ce0cae66228c07c50f12e24",
    "_id": "5ce0cae66228c07c50f12e24",
    "blueAlliance": "5cd0cae66228c07c50f12e24",
    "endDate": 2017-12-17T17:45:00.000Z,
    "redAlliance": "5ce0cae66228c07c50f12e24",
    "startDate": 2017-12-17T17:45:00.000Z,
  },
}
`;
